; ModuleID = '/home/carl/AnghaBench/systemd/src/network/netdev/extr_tuntap.c_tuntap_verify.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/netdev/extr_tuntap.c_tuntap_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32, i64 }

@.str = private unnamed_addr constant [108 x i8] c"MTUBytes= configured for %s device in %s will be ignored.\0APlease set it in the corresponding .network file.\00", align 1
@.str.1 = private unnamed_addr constant [110 x i8] c"MACAddress= configured for %s device in %s will be ignored.\0APlease set it in the corresponding .network file.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i8*)* @tuntap_verify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tuntap_verify(%struct.TYPE_5__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = call i32 @assert(%struct.TYPE_5__* %5)
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %2
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @netdev_kind_to_string(i32 %15)
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @log_netdev_warning(%struct.TYPE_5__* %12, i8* getelementptr inbounds ([108 x i8], [108 x i8]* @.str, i64 0, i64 0), i32 %16, i8* %17)
  br label %19

19:                                               ; preds = %11, %2
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 2
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %32

24:                                               ; preds = %19
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @netdev_kind_to_string(i32 %28)
  %30 = load i8*, i8** %4, align 8
  %31 = call i32 @log_netdev_warning(%struct.TYPE_5__* %25, i8* getelementptr inbounds ([110 x i8], [110 x i8]* @.str.1, i64 0, i64 0), i32 %29, i8* %30)
  br label %32

32:                                               ; preds = %24, %19
  ret i32 0
}

declare dso_local i32 @assert(%struct.TYPE_5__*) #1

declare dso_local i32 @log_netdev_warning(%struct.TYPE_5__*, i8*, i32, i8*) #1

declare dso_local i32 @netdev_kind_to_string(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
